SOC-1936 | Discussion OG editing - fixed spacing

--- a/front/main/app/styles/component/_discussion-open-graph.scss
+++ b/front/main/app/styles/component/_discussion-open-graph.scss
@@ -153,7 +153,7 @@
 		.discussion-editor {
 			&.is-edit {
 				.og-container {
-					margin: 15px;
+					margin: 0 15px 15px;
 				}
 			}
 
